main.css
/* ... */
#bizCon5-2 {
    text-align: justify;
    font-size: calc(10px + 0.4vw);
}

#bizCon5-3 {
    text-align: center;
    font-size: calc(10px + 0.5vw);
}

#bizConsultDescriptorDiv6 {
    background-color: rgb(25, 178, 80);
    color: rgb(12, 59, 93);
    padding: 30px 20px;
    border-radius: 15px;
}

#bizConsultDescriptorDiv6 h2 {
    font-family: "Averia Libre", cursive;
    font-size: calc(10px + 1.2vw);
}

#bizConsultDescriptorDiv6 p {
    font-family: "Poppins", sans-serif;
    font-size: calc(10px + 0.6vw);
}

#bizConsultDescriptorDiv7 {
    background-color: rgb(12, 59, 93);
    color: white;
    padding: 20px;
}

#bizConsultDescriptorDiv7 h2 {
    font-family: "Averia Libre", cursive;
}

#bizConsultDescriptorDiv7 p {
    font-family: "Poppins", sans-serif;
    font-size: calc(10px + 0.6vw);
}

@media screen and (max-width: 767px) {
    #thirdRowBizConsult div {
        margin: 4vh 0vw;
    }

    #fourthRowBizConsult div {
        margin: 4vw 0vw;
    }
}

@media screen and (max-width: 300px) {
    #navContainer {
        height: 70px;
    }

    #navMain {
        height: 70px;
    }

    #titleLogo {
        max-height: 70px; 
    }

    #hamButton {
        border: 2px solid rgb(25, 178, 80, 0.85);
    }

    #spanIcon {
        background-image: url(
        "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(25, 178, 80)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
        width: 22px;
        height: 25px;
    }
}




/* FOOTER ALL PAGES */
#footRow1 {
    background-color: rgb(38, 38, 38);
    display: flex;
    justify-content: center;
    align-items: center;
    height: 300px;
}

.footNavColumns {
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
}

.footNavColumnTitles {
    font-family: "Averia Libre", cursive;
    font-size: calc(12px + 1.6vw);
    color: white;
    margin-top: 25px;
}

#footLogo {
    width: 10vw;
}

#footNav2 {
    color: white;
    display: block;
    /* border-right: 2px inset rgb(25, 178, 80, 0.4); */
}

.footNavSocial{
    margin: 20px auto;
}

.footNavSocialIcons {
    color: white;
    font-size: calc(12px + 2vw);
}

.footNavSocialIcons:hover {
    color: rgb(0, 160, 223)
}

#footNav3 {
    display: block;
    color: white;
    border-right: 2px inset rgb(25, 178, 80, 0.4);
    border-left: 2px outset rgb(25, 178, 80, 0.4);
}

#footNavServicesDiv {
    margin-top: 20px;
}

.footNavLinkHouses {
    margin: 15px auto;
}

.footNavLinks {
    color: white;
    font-family: "Poppins", sans-serif;
    font-size: calc(10px + 0.6vw);
}

.footNavLinks:hover {
    color: rgb(0, 160, 223);
}

@media screen and (max-width: 1128.5px) {
    .footNavLinkHouses {
        margin: 10px auto;
    }

    #footNavServicesDiv {
        margin-top: 10px;
    }
}

#footNav4 {
    text-align: center;
    display: block;
    align-items: center;
}

#footNavContactDiv {
    margin: 35px auto;
}

.footNavContact {
    color: white;
    font-size: calc(10px + 0.8vw);
    font-family: "Poppins", sans-serif;
    margin: 20px auto;
}

.footNavContactLinks {
    color: white;
}

.footNavContactLinks:hover {
    color: rgb(0, 160, 223);
}

@media screen and (max-width: 1267px) and (min-width: 1013px) {
    #footLogo {
        width: 12vw;
    }
}

@media screen and (max-width: 1012.5px) {
    #footLogo {
        width: 14vw;
    }

    .footNavColumnTitles {
        font-size: calc(12px + 1.4vw);
    }

    .footNavLinkHouses {
        margin: 7px auto;
    }

    .footNavContact {
        margin: 17px auto;
    }

    #footNavContactDiv {
        margin: 30px auto;
    }
}

@media screen and (max-width: 767.5px) {
    #footLogo {
        width: 15vw;
    }

    #footRow1 {
        display: block;
        height: 100%;
        padding: 20px 0px;
    }

    .footNavColumnTitles {
        font-size: calc(12px + 2vw);
    }

    .footNavSocial:nth-child(4) {
        border-left: none;
        border-right: none;
        padding: 2px 0px 30px 0px;
        position: relative;
        z-index: 1;
    }

    .footNavSocial:nth-child(4):before {
        content: "";
        position: absolute;
        left: 25%;
        bottom: 0;
        width: 50%;
        border-bottom: 2px inset rgb(25, 178, 80, 0.4);
    }

    .footNavLinkHouses:nth-child(4) {
        border-left: none;
        border-right: none;
        padding: 2px 0px 30px 0px;
        position: relative;
        z-index: 1;
    }

    .footNavLinkHouses:nth-child(4):before {
        content: "";
        position: absolute;
        border-left: none;
        border-right: none;
        left: 25%;
        bottom: 0;
        width: 50%;
        border-bottom: 2px inset rgb(25, 178, 80, 0.4);
    }

    #footNav3 {
        border-left: none;
        border-right: none;
    }

    .footNavSocialIcons {
        font-size: calc(12px + 3vw);
    }

    #footTag h5 {
        font-size: calc(12px + 0.8vw);
    }
}

@media screen and (max-width: 480px) {
    #footLogo {
        width: 20vw;
    }
}

@media screen and (max-width: 300px) {
    #footLogo {
        width: 28vw;
    }
}

#footRow2 {
    padding: 15px 0 5px 0;
    display: flex;
    justify-content: center;
    border: 1px solid black;
    background-color: rgb(25, 178, 80, 0.85);
    align-items: center;
}

#footTag {
    text-align: center;
    align-items: center;
    font-family: "Poppins", sans-serif;
}

#learicist {
    color: black;
    
}

